Modify css link paths

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Carousel</title>
-    <link rel="stylesheet" href="/shared/css/reset.css" />
-    <link rel="stylesheet" href="/carousel/css/style.css" />
+    <link rel="stylesheet" href="../shared/css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="/carousel/js/carousel.js" defer></script>
   </head>
   <body>
