Modify js link paths

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -6,7 +6,7 @@
     <title>Image Carousel</title>
     <link rel="stylesheet" href="../shared/css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="/carousel/js/carousel.js" defer></script>
+    <script src="js/carousel.js" defer></script>
   </head>
   <body>
     <div class="carousel-container">
