--- a/dropdown/index.html
+++ b/dropdown/index.html
@@ -6,7 +6,7 @@
     <title>Dropdown Navigation</title>
     <link rel="stylesheet" href="../shared/css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="/dropdown/js/dropdown.js" defer></script>
+    <script src="js/dropdown.js" defer></script>
   </head>
   <body>
     <nav class="nav-bar">
